# python_ai_agent

./: README.md  main.py  pyproject.toml  tests.py
calculator/: lorem.txt
calculator/pkg/: render.py
functions/: get_file_content.py  get_files_info.py  path_util.py
